src/objects/Customer_Confidential_Documentation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Confidential Documentations</relationshipLabel>
        <relationshipName>Customer_Confidential_Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_and_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved and Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Customer Confidential Documentations</relationshipLabel>
        <relationshipName>Customer_Confidential_Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Building_Society_Account_Number__c</fullName>
        <label>Bank / Building Society Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_IBAN_Number__c</fullName>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone__c</fullName>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_Swift__c</fullName>
        <label>Bank Swift</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Sort_Code__c</fullName>
        <label>Branch Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collections_File_Sequence_Number__c</fullName>
        <defaultValue>&quot;0N&quot;</defaultValue>
        <label>Collections File Sequence number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0N</fullName>
                    <default>true</default>
                    <label>0N</label>
                </value>
                <value>
                    <fullName>0C</fullName>
                </value>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Bank_Account_Number__c</fullName>
        <formula>Bank_Building_Society_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Bank Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sort_Code__c</fullName>
        <formula>Branch_Sort_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Acc_Num_1__c</fullName>
        <label>DDF Acc Num 1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Acc_Num_2__c</fullName>
        <label>DDF Acc Num 2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Acc_Num_3__c</fullName>
        <label>DDF Acc Num 3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Account_Name_1__c</fullName>
        <label>Account Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Account_Name_2__c</fullName>
        <label>Account Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Branch_Sort_Code_1__c</fullName>
        <label>Branch Sort Code 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Branch_Sort_Code_2__c</fullName>
        <label>Branch Sort Code 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Branch_Sort_Code_3__c</fullName>
        <label>Branch Sort Code 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDF_Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_0N_File_Submitted__c</fullName>
        <label>Date 0N File Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Signature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Debit Signature</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Confidential Documentations</relationshipLabel>
        <relationshipName>Customer_Confidential_Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Envelope_Id__c</fullName>
        <externalId>true</externalId>
        <label>Envelope Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Customer Confidential Documentations</relationshipLabel>
        <relationshipName>Customer_Confidential_Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Of_Account_Holder__c</fullName>
        <label>Name(s) Of Account Holder(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_and_Full_Postal_Address_Of_Bank__c</fullName>
        <label>Name and Full Postal Address Of Bank</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ_Quote_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Document</label>
        <referenceTo>SBQQ__QuoteDocument__c</referenceTo>
        <relationshipLabel>Customer Confidential Documentations</relationshipLabel>
        <relationshipName>Customer_Confidential_Documentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Customer_Acknowledgement_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Customer Acknowledgement Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Status__c</fullName>
        <label>Signature Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Correct</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DD On Hold</fullName>
                </value>
                <value>
                    <fullName>DD Active</fullName>
                </value>
                <value>
                    <fullName>DD Cancelled</fullName>
                </value>
                <value>
                    <fullName>DD Rejected</fullName>
                </value>
                <value>
                    <fullName>DD Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_for_Ad_Hoc_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use for Ad-Hoc Revenue</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Confidential Documentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Legal_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Approved_and_Checked__c</columns>
        <columns>Use_for_Ad_Hoc_Revenue__c</columns>
        <columns>Date_0N_File_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCD-{00000000}</displayFormat>
        <label>CCD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Confidential Documentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandatory_CollectionsFileSequenceNumber</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Collections_File_Sequence_Number__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Collections_File_Sequence_Number__c</errorDisplayField>
        <errorMessage>Must be populated</errorMessage>
    </validationRules>
</CustomObject>